chore(targets): remove deprecated fields on target api/cli/sdk and repo
Removes the following deprecated fields:

* application_credential_libraries
* application_credential_library_ids
* host_sets
* host_set_ids
