# internal/gen/controller.swagger.json
@@ -2551,39 +2551,6 @@
         ]
       }
     },
-    "/v1/targets/{id}:add-credential-libraries": {
-      "post": {
-        "summary": "Deprecated: use AddTargetCredentialSources instead.",
-        "operationId": "TargetService_AddTargetCredentialLibraries",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.AddTargetCredentialLibrariesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
     "/v1/targets/{id}:add-credential-sources": {
       "post": {
         "summary": "Adds existing Credential Sources to a Target.",
@@ -2609,39 +2576,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/controller.api.services.v1.AddTargetCredentialSourcesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
-    "/v1/targets/{id}:add-host-sets": {
-      "post": {
-        "summary": "Adds existing Host Sets to a Target.",
-        "operationId": "TargetService_AddTargetHostSets",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.AddTargetHostSetsRequest"
             }
           }
         ],
@@ -2717,39 +2651,6 @@
         ]
       }
     },
-    "/v1/targets/{id}:remove-credential-libraries": {
-      "post": {
-        "summary": "Deprecated: use RemoveTargetCredentialSources instead.",
-        "operationId": "TargetService_RemoveTargetCredentialLibraries",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.RemoveTargetCredentialLibrariesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
     "/v1/targets/{id}:remove-credential-sources": {
       "post": {
         "summary": "Removes Credential Sources from the Target.",
@@ -2775,39 +2676,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/controller.api.services.v1.RemoveTargetCredentialSourcesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
-    "/v1/targets/{id}:remove-host-sets": {
-      "post": {
-        "summary": "Removes Host Sets from the Target.",
-        "operationId": "TargetService_RemoveTargetHostSets",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.RemoveTargetHostSetsRequest"
             }
           }
         ],
@@ -2849,39 +2717,6 @@
         ]
       }
     },
-    "/v1/targets/{id}:set-credential-libraries": {
-      "post": {
-        "summary": "Deprecated: use SetTargetCredentialSources instead.",
-        "operationId": "TargetService_SetTargetCredentialLibraries",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.SetTargetCredentialLibrariesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
     "/v1/targets/{id}:set-credential-sources": {
       "post": {
         "summary": "Sets the Credential Sources on the Target.",
@@ -2907,39 +2742,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/controller.api.services.v1.SetTargetCredentialSourcesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "controller.api.services.v1.TargetService"
-        ]
-      }
-    },
-    "/v1/targets/{id}:set-host-sets": {
-      "post": {
-        "summary": "Sets the Host Sets on the Target.",
-        "operationId": "TargetService_SetTargetHostSets",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/controller.api.services.v1.SetTargetHostSetsRequest"
             }
           }
         ],
@@ -4346,35 +4148,6 @@
         }
       }
     },
-    "controller.api.resources.targets.v1.CredentialLibrary": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "description": "The ID of the Credential Library."
-        },
-        "name": {
-          "type": "string",
-          "description": "Output only.  The name of the Credential Library.",
-          "readOnly": true
-        },
-        "description": {
-          "type": "string",
-          "description": "Output only. The description of the Credential Library.",
-          "readOnly": true
-        },
-        "credential_store_id": {
-          "type": "string",
-          "description": "Output only. The Credential Store to which this Credential Library belongs.",
-          "readOnly": true
-        },
-        "type": {
-          "type": "string",
-          "description": "Output only. The type of the credential library.",
-          "readOnly": true
-        }
-      }
-    },
     "controller.api.resources.targets.v1.CredentialSource": {
       "type": "object",
       "properties": {
@@ -4400,21 +4173,6 @@
         "type": {
           "type": "string",
           "description": "Output only. The type of the credential source (e.g. \"vault\"; not the type of the credential itself).",
-          "readOnly": true
-        }
-      }
-    },
-    "controller.api.resources.targets.v1.HostSet": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "description": "Output only. The ID of the Host Set.",
-          "readOnly": true
-        },
-        "host_catalog_id": {
-          "type": "string",
-          "description": "Output only. The Host Catalog to which this Host Set belongs.",
           "readOnly": true
         }
       }
@@ -4507,11 +4265,6 @@
           "description": "Output only. The credential source information.",
           "readOnly": true
         },
-        "credential_library": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.CredentialLibrary",
-          "description": "Output only. The library which generated this credential. Deprecated: use credential_source instead.",
-          "readOnly": true
-        },
         "secret": {
           "$ref": "#/definitions/controller.api.resources.targets.v1.SessionSecret",
           "description": "Output only. The secret of this credential base64 encoded.",
@@ -4582,21 +4335,6 @@
           "type": "string",
           "description": "The type of the Target."
         },
-        "host_set_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "The IDs of the Host Sets associated with this Target."
-        },
-        "host_sets": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/controller.api.resources.targets.v1.HostSet"
-          },
-          "description": "Output only. The Host Sets associated with this Target.",
-          "readOnly": true
-        },
         "host_source_ids": {
           "type": "array",
           "items": {
@@ -4625,21 +4363,6 @@
         "worker_filter": {
           "type": "string",
           "description": "Optional boolean expression to filter the workers that are allowed to satisfy this request."
-        },
-        "application_credential_library_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "The IDs of the application credential library ids associated with this Target. Deprecated: use application_credential_source_ids instead."
-        },
-        "application_credential_libraries": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/controller.api.resources.targets.v1.CredentialLibrary"
-          },
-          "description": "Output only. The application credential libraries associated with this Target. Deprecated: use application_credential_sources instead.",
-          "readOnly": true
         },
         "application_credential_source_ids": {
           "type": "array",
@@ -4884,33 +4607,6 @@
         }
       }
     },
-    "controller.api.services.v1.AddTargetCredentialLibrariesRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "application_credential_library_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "controller.api.services.v1.AddTargetCredentialLibrariesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
     "controller.api.services.v1.AddTargetCredentialSourcesRequest": {
       "type": "object",
       "properties": {
@@ -4931,33 +4627,6 @@
       }
     },
     "controller.api.services.v1.AddTargetCredentialSourcesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
-    "controller.api.services.v1.AddTargetHostSetsRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "host_set_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "controller.api.services.v1.AddTargetHostSetsResponse": {
       "type": "object",
       "properties": {
         "item": {
@@ -5769,33 +5438,6 @@
         }
       }
     },
-    "controller.api.services.v1.RemoveTargetCredentialLibrariesRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "application_credential_library_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "controller.api.services.v1.RemoveTargetCredentialLibrariesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
     "controller.api.services.v1.RemoveTargetCredentialSourcesRequest": {
       "type": "object",
       "properties": {
@@ -5816,33 +5458,6 @@
       }
     },
     "controller.api.services.v1.RemoveTargetCredentialSourcesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
-    "controller.api.services.v1.RemoveTargetHostSetsRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "host_set_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "controller.api.services.v1.RemoveTargetHostSetsResponse": {
       "type": "object",
       "properties": {
         "item": {
@@ -6037,34 +5652,6 @@
         }
       }
     },
-    "controller.api.services.v1.SetTargetCredentialLibrariesRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "application_credential_library_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      },
-      "description": "Sets the values for application_credential_library_ids.  If any\ncredential_library_id field that is not set in the request will result in\nthose fields being cleared."
-    },
-    "controller.api.services.v1.SetTargetCredentialLibrariesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
     "controller.api.services.v1.SetTargetCredentialSourcesRequest": {
       "type": "object",
       "properties": {
@@ -6086,33 +5673,6 @@
       "description": "Sets the values for application_credential_source_ids.  If any\ncredential_source_id field that is not set in the request will result in\nthose fields being cleared."
     },
     "controller.api.services.v1.SetTargetCredentialSourcesResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/controller.api.resources.targets.v1.Target"
-        }
-      }
-    },
-    "controller.api.services.v1.SetTargetHostSetsRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "version": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Version is used to ensure this resource has not changed.\nThe mutation will fail if the version does not match the latest known good version."
-        },
-        "host_set_ids": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "controller.api.services.v1.SetTargetHostSetsResponse": {
       "type": "object",
       "properties": {
         "item": {
